# ScrapeMatrix

./: .gitignore  BUILD_COMPLETE.md  DELIVERY_CERTIFICATE.md  DELIVERY_COMPLETE.md  DELIVERY_MANIFEST.md  DOCUMENTATION_INDEX_v0.1.0.md  EXECUTABLE_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  ITERATION_1_COMPLETE_MANIFEST.md  ITERATION_1_DELIVERY_SUMMARY.md  ITERATION_1_EXECUTIVE_SUMMARY.md  ITERATION_1_FINAL_DELIVERY.md  ITERATION_1_VERIFICATION_REPORT.md  ITERATIVE_ROADMAP_200.md  LICENSE  PHASE_1_ITERATION_1_COMPLETE.md  PHASE_1_LAUNCH_README.md  PHASE_1_QUICK_REFERENCE.md  PROGRESS_DASHBOARD.md  PROJECT_ANALYSIS.md  QUICKSTART_v0.1.0.md  QUICK_REFERENCE.md  README.md  README_ITERATION_1.md  README_v0.1.0.md  VISUAL_GUIDE_v0.1.0.md  pyproject.toml  pytest.ini  run.ps1  scrapematrix_launcher.py  test_run.py  v0.1.0_RELEASE_SUMMARY.md
data/: scrapematrix.db
docs/: ANSWER_WILL_YOU_NEED_MODULES.md  ARCHITECTURE.md  CLEANUP_CHECKLIST.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_REPORT.md  CODE_STRUCTURE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  COUNTRY_FILTER_IMPLEMENTATION_SUMMARY.md  COUNTRY_FILTER_QUICK_REFERENCE.md  COUNTRY_STOCK_FILTER_FEATURE.md  CURRENCY_DYNAMIC_PLACEHOLDERS_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DYNAMIC_TICKER_SUGGESTIONS.md  ENHANCED_CURRENCY_FEATURE.md  EXECUTABLE_PACKAGING_GUIDE.md  FAQ.md  FEATURES.md  FEATURES_v0.1.0.md  FUTURE_MODULES_GUIDE.md  HLSD-Architecture.drawio  HOW_TO_ADD_IMAGES.md  INDEX.md  INIT_CLEANUP_PLAN.md  INIT_FILES_ANALYSIS.md  INSTALLATION.md  MODULES.md  (+19 more)
(+40 files in other folders)
