[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapematrix"
version = "0.1.0"
description = "Industrial-Grade Stock Analysis Desktop App"
readme = "README.md"
license = "MIT"
authors = [{name = "ScrapeMatrix Contributors"}]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.1",
]

[project.scripts]
scrapematrix = "scrapematrix.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scrapematrix"]
