[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapematrix"
version = "0.1.0"
description = "Industrial-Grade Stock Analysis Desktop App"
readme = "README.md"
license = "MIT"
authors = [{name = "ScrapeMatrix Contributors"}]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.6.1",
    "matplotlib>=3.7.0",
    "pandas>=1.5.0",
    "yfinance>=0.2.32",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
build = [
    "PyInstaller>=5.13.0",
    "upx-upx>=4.2.4",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
scrapematrix = "scrapematrix.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scrapematrix"]
